tests/sumo/errors/invalid_step_length/options.sumo
-n net.net.xml --route-files input_routes.rou.xml --step-length 0.0001

